--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ test.csv
 *__pycache__*
 output/*
 config/global_attributes_copy*
-config/global_attributes_Nataly*
 config/global_attributes_test*
 test_execute.sh
 plyfile_test.py
 private_notes.txt
+config/global_attributes_Nataly.yml
