scaling hyspex data to store as integers to save space

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ tests/data/2020*
 test.csv
 *__pycache__*
 output/*
+input/*
+logs/*
 config/global_attributes_copy*
 config/global_attributes_test*
 test_execute.sh
