--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ test_execute.sh
 plyfile_test.py
 private_notes.txt
 config/global_attributes_Nataly.yml
-visualise_data.py
+visualise_data*
+count_lines*
