updated global attributes

--- a/config/global_attributes.yml
+++ b/config/global_attributes.yml
@@ -17,7 +17,7 @@ summary:
   description: "A paragraph describing the dataset."
   requirement: "Required."
   format: "text"
-  value: ""
+  value: "Airborne hyperspectral point cloud data acquired with a HySpex Mjolnir VNIR (400–1000 nm) spectrometer mounted on Lufttransport's aircraft (Dornier DO228 POD). The sensor records 1800 spatial pixels per scan line with 186 spectral channels. Precise geolocation is derived from Applanix POS AV 410 navigation data and a 5 m DEM from the Norwegian Polar Institute, with raytracing used to produce 3D georeferenced point clouds linked to full spectra. Products can be visualised as point clouds, converted to 3D meshes, or rasterised to geocoded imagery. Applications include cryosphere, ocean, and vegetation studies, such as glacier mapping, snow property assessment, biomass estimation, and algal bloom detection."
 
 keywords:
   description: "A comma-separated list of keywords or phrases."
