--- a/config/variable_mapping.yml
+++ b/config/variable_mapping.yml
@@ -96,6 +96,7 @@ red: # Name of variable to be used in NetCDF file
     long_name: 'red channel (normalised to 16-bit integer)'
     standard_name: red_component_of_toa_outgoing_shortwave_flux_expressed_as_rgb_color
     coverage_content_type: 'physicalMeasurement'
+    coordinates: 'gps_time latitude longitude Z'
 
 green: # Name of variable to be used in NetCDF file
   dtype: 'i4' #! Would be f4 if between 0 and 1 and maybe between 0 and 255 too
@@ -109,6 +110,7 @@ green: # Name of variable to be used in NetCDF file
     long_name: 'green channel (normalised to 16-bit integer)'
     standard_name: green_component_of_toa_outgoing_shortwave_flux_expressed_as_rgb_color
     coverage_content_type: 'physicalMeasurement'
+    coordinates: 'gps_time latitude longitude Z'
 
 blue: # Name of variable to be used in NetCDF file
   dtype: 'i4' #! Would be f4 if between 0 and 1 and maybe between 0 and 255 too
@@ -122,6 +124,7 @@ blue: # Name of variable to be used in NetCDF file
     long_name: 'blue channel (normalised to 16-bit integer)'
     standard_name: blue_component_of_toa_outgoing_shortwave_flux_expressed_as_rgb_color
     coverage_content_type: 'physicalMeasurement'
+    coordinates: 'gps_time latitude longitude Z'
 
 nx: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -133,6 +136,7 @@ nx: # Name of variable to be used in NetCDF file
     long_name: 'terrain normal vector, x channel'
     coverage_content_type: 'physicalMeasurement'
     standard_name: x_component_of_surface_outward_normal_unit_vector
+    coordinates: 'gps_time latitude longitude Z'
 
 ny: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -144,6 +148,7 @@ ny: # Name of variable to be used in NetCDF file
     long_name: 'terrain normal vector, y channel'
     coverage_content_type: 'physicalMeasurement'
     standard_name: y_component_of_surface_outward_normal_unit_vector
+    coordinates: 'gps_time latitude longitude Z'
 
 nz: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -155,6 +160,7 @@ nz: # Name of variable to be used in NetCDF file
     long_name: 'terrain normal vector, z channel'
     coverage_content_type: 'physicalMeasurement'
     standard_name: upward_component_of_surface_outward_normal_unit_vector
+    coordinates: 'gps_time latitude longitude Z'
 
 vx: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -165,6 +171,7 @@ vx: # Name of variable to be used in NetCDF file
     long_name: 'sensor view vector, x channel'
     standard_name: 'x_component_of_unit_vector_away_from_instrument'
     coverage_content_type: 'physicalMeasurement'
+    coordinates: 'gps_time latitude longitude Z'
 
 vy: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -175,6 +182,7 @@ vy: # Name of variable to be used in NetCDF file
     long_name: 'sensor view vector, y channel'
     standard_name: 'y_component_of_unit_vector_away_from_instrument'
     coverage_content_type: 'physicalMeasurement'
+    coordinates: 'gps_time latitude longitude Z'
 
 vz: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -185,6 +193,7 @@ vz: # Name of variable to be used in NetCDF file
     long_name: 'sensor view vector, z channel'
     standard_name: 'upward_component_of_unit_vector_away_from_instrument'
     coverage_content_type: 'physicalMeasurement'
+    coordinates: 'gps_time latitude longitude Z'
 
 px: # Name of variable to be used in NetCDF file
   dtype: 'i4'
@@ -194,6 +203,7 @@ px: # Name of variable to be used in NetCDF file
     units: '1'
     long_name: 'pixel number'
     coverage_content_type: 'auxiliaryInformation'
+    coordinates: 'gps_time latitude longitude Z'
 
 py: # Name of variable to be used in NetCDF file
   dtype: 'i4'
@@ -203,6 +213,7 @@ py: # Name of variable to be used in NetCDF file
     units: '1'
     long_name: 'line number, y channel'
     coverage_content_type: 'auxiliaryInformation'
+    coordinates: 'gps_time latitude longitude Z'
 
 scan_angle_rank: # Name of variable to be used in NetCDF file
   dtype: 'i4'
@@ -215,6 +226,7 @@ scan_angle_rank: # Name of variable to be used in NetCDF file
     valid_min: -90
     valid_max: 90
     coverage_content_type: 'coordinate'
+    coordinates: 'gps_time latitude longitude Z'
 
 gps_time: # Name of variable to be used in NetCDF file
   dtype: 'i4'
@@ -237,5 +249,7 @@ intensity: # Name of variable to be used in NetCDF file
   attributes: # Variable attributes to be written to NetCDF file for the variable
     units: '1'
     long_name: 'strength of returning signal to the LiDAR (normalised to 16-bit integer)'
-    standard_name: 'toa_outgoing_radiance_per_unit_wavelength'
+    #standard_name: 'toa_outgoing_radiance_per_unit_wavelength'
     coverage_content_type: 'physicalMeasurement'
+    coordinates: 'gps_time latitude longitude Z'
+
