Added shell.nix for managing python evironment and harmonized requirements.txt and shell.nix

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,18 @@ visualise_data*
 count_lines*
 *png
 *.sh
+
+
+# Ignore Python Environment
+.venv/
+__pycache__/
+*.pyc
+
+# Ignore IDE settings
+.vscode/
+
+# Ignore Test Data (Don't upload massive NetCDFs!)
+*.nc
+*.ply
+*.las
+*.laz
