--- a/config/variable_mapping.yml
+++ b/config/variable_mapping.yml
@@ -93,7 +93,7 @@ red: # Name of variable to be used in NetCDF file
     units: '1'
     valid_min: 0.0
     valid_max: 255.0
-    long_name: 'red channel (normalised to 16-bit integer)'
+    long_name: 'red channel (normalised to 8-bit integer)'
     standard_name: red_component_of_toa_outgoing_shortwave_flux_expressed_as_rgb_color
     coverage_content_type: 'physicalMeasurement'
     coordinates: 'gps_time latitude longitude Z'
@@ -107,7 +107,7 @@ green: # Name of variable to be used in NetCDF file
     units: '1'
     valid_min: 0.0
     valid_max: 255.0
-    long_name: 'green channel (normalised to 16-bit integer)'
+    long_name: 'green channel (normalised to 8-bit integer)'
     standard_name: green_component_of_toa_outgoing_shortwave_flux_expressed_as_rgb_color
     coverage_content_type: 'physicalMeasurement'
     coordinates: 'gps_time latitude longitude Z'
@@ -121,7 +121,7 @@ blue: # Name of variable to be used in NetCDF file
     units: '1'
     valid_min: 0.0
     valid_max: 255.0
-    long_name: 'blue channel (normalised to 16-bit integer)'
+    long_name: 'blue channel (normalised to 8-bit integer)'
     standard_name: blue_component_of_toa_outgoing_shortwave_flux_expressed_as_rgb_color
     coverage_content_type: 'physicalMeasurement'
     coordinates: 'gps_time latitude longitude Z'
@@ -228,14 +228,14 @@ scan_angle_rank: # Name of variable to be used in NetCDF file
     coverage_content_type: 'coordinate'
     coordinates: 'gps_time latitude longitude Z'
 
-gps_time: # Name of variable to be used in NetCDF file
+epoch_time: # Name of variable to be used in NetCDF file
   dtype: 'i4'
   possible_names: # Possible names of variable in PLY or LAS file
     - gps_time
     - time_stamp
     - epoch
   attributes: # Variable attributes to be written to NetCDF file for the variable
-    units: 'seconds since 1980-01-06 00:00:00 UTC'
+    units: 'seconds since 1970-01-01 00:00:00 UTC'
     long_name: 'Time at when the point was measured'
     standard_name: 'time'
     coverage_content_type: 'coordinate'
@@ -248,7 +248,7 @@ intensity: # Name of variable to be used in NetCDF file
     - spectral intensity
   attributes: # Variable attributes to be written to NetCDF file for the variable
     units: '1'
-    long_name: 'strength of returning signal to the LiDAR (normalised to 16-bit integer)'
+    long_name: 'strength of returning signal to the LiDAR'
     #standard_name: 'toa_outgoing_radiance_per_unit_wavelength'
     coverage_content_type: 'physicalMeasurement'
     coordinates: 'gps_time latitude longitude Z'
