--- a/config/variable_mapping.yml
+++ b/config/variable_mapping.yml
@@ -96,7 +96,7 @@ red: # Name of variable to be used in NetCDF file
     long_name: 'red channel (normalised to 8-bit integer)'
     standard_name: red_component_of_toa_outgoing_shortwave_flux_expressed_as_rgb_color
     coverage_content_type: 'physicalMeasurement'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 green: # Name of variable to be used in NetCDF file
   dtype: 'i4' #! Would be f4 if between 0 and 1 and maybe between 0 and 255 too
@@ -110,7 +110,7 @@ green: # Name of variable to be used in NetCDF file
     long_name: 'green channel (normalised to 8-bit integer)'
     standard_name: green_component_of_toa_outgoing_shortwave_flux_expressed_as_rgb_color
     coverage_content_type: 'physicalMeasurement'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 blue: # Name of variable to be used in NetCDF file
   dtype: 'i4' #! Would be f4 if between 0 and 1 and maybe between 0 and 255 too
@@ -124,7 +124,7 @@ blue: # Name of variable to be used in NetCDF file
     long_name: 'blue channel (normalised to 8-bit integer)'
     standard_name: blue_component_of_toa_outgoing_shortwave_flux_expressed_as_rgb_color
     coverage_content_type: 'physicalMeasurement'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 nx: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -136,7 +136,7 @@ nx: # Name of variable to be used in NetCDF file
     long_name: 'terrain normal vector, x channel'
     coverage_content_type: 'physicalMeasurement'
     standard_name: x_component_of_surface_outward_normal_unit_vector
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 ny: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -148,7 +148,7 @@ ny: # Name of variable to be used in NetCDF file
     long_name: 'terrain normal vector, y channel'
     coverage_content_type: 'physicalMeasurement'
     standard_name: y_component_of_surface_outward_normal_unit_vector
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 nz: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -160,7 +160,7 @@ nz: # Name of variable to be used in NetCDF file
     long_name: 'terrain normal vector, z channel'
     coverage_content_type: 'physicalMeasurement'
     standard_name: upward_component_of_surface_outward_normal_unit_vector
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 vx: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -171,7 +171,7 @@ vx: # Name of variable to be used in NetCDF file
     long_name: 'sensor view vector, x channel'
     standard_name: 'x_component_of_unit_vector_away_from_instrument'
     coverage_content_type: 'physicalMeasurement'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 vy: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -182,7 +182,7 @@ vy: # Name of variable to be used in NetCDF file
     long_name: 'sensor view vector, y channel'
     standard_name: 'y_component_of_unit_vector_away_from_instrument'
     coverage_content_type: 'physicalMeasurement'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 vz: # Name of variable to be used in NetCDF file
   dtype: 'f4'
@@ -193,7 +193,7 @@ vz: # Name of variable to be used in NetCDF file
     long_name: 'sensor view vector, z channel'
     standard_name: 'upward_component_of_unit_vector_away_from_instrument'
     coverage_content_type: 'physicalMeasurement'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 px: # Name of variable to be used in NetCDF file
   dtype: 'i4'
@@ -203,7 +203,7 @@ px: # Name of variable to be used in NetCDF file
     units: '1'
     long_name: 'pixel number'
     coverage_content_type: 'auxiliaryInformation'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 py: # Name of variable to be used in NetCDF file
   dtype: 'i4'
@@ -213,7 +213,7 @@ py: # Name of variable to be used in NetCDF file
     units: '1'
     long_name: 'line number, y channel'
     coverage_content_type: 'auxiliaryInformation'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 scan_angle_rank: # Name of variable to be used in NetCDF file
   dtype: 'i4'
@@ -226,7 +226,7 @@ scan_angle_rank: # Name of variable to be used in NetCDF file
     valid_min: -90
     valid_max: 90
     coverage_content_type: 'coordinate'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
 epoch_time: # Name of variable to be used in NetCDF file
   dtype: 'i4'
@@ -234,6 +234,7 @@ epoch_time: # Name of variable to be used in NetCDF file
     - gps_time
     - time_stamp
     - epoch
+    - epoch_time
   attributes: # Variable attributes to be written to NetCDF file for the variable
     units: 'seconds since 1970-01-01 00:00:00 UTC'
     long_name: 'Time at when the point was measured'
@@ -251,5 +252,5 @@ intensity: # Name of variable to be used in NetCDF file
     long_name: 'strength of returning signal to the LiDAR'
     #standard_name: 'toa_outgoing_radiance_per_unit_wavelength'
     coverage_content_type: 'physicalMeasurement'
-    coordinates: 'gps_time latitude longitude Z'
+    coordinates: 'epoch_time latitude longitude Z'
 
