Corrected time handling. writes epoch time to PLY and adjusted GPS time to LAS. Ignores leapseconds though.

--- a/config/to_pc_config.yaml
+++ b/config/to_pc_config.yaml
@@ -39,4 +39,6 @@ mappings:
   py: py
   
   # Time
-  gps_time: epoch
+  gps_time: epoch    # Old naming convention
+  epoch_time: epoch  # New naming convention
+  time: epoch        # Another common convention
